[gtm] Setup Google Tag Manager linking.
Change-Id: If46156285764a1d6b5a5ed3744d8eee1f7dbe478

--- a/source/_config.yml
+++ b/source/_config.yml
@@ -25,6 +25,7 @@ description: >-
   即時的回覆，精準的問答，Chatbot 讓客服不再是難題
 baseurl: ""
 url: "https://triple-ai.com"
+google_tag_manager: GTM-M75GQ4M
 
 # Markdown settings
 markdown: kramdown
