[gem] Install jekyll-asset for goodies on asset management.
Change-Id: I260482dd3048e84e2e621699758019042128f452

--- a/source/_config.yml
+++ b/source/_config.yml
@@ -45,6 +45,7 @@ exclude:
 # Plugin settings
 plugins:
   - jekyll-seo-tag
+  - jekyll-assets
 
 # Facebook customer chat plugin settings
 fb_customer_chat:
