[asset] Obtain asset path with jekyll-assets.
This automatically adds cachebuster to the path. For example:

    <img src="{% asset images/logo.svg @path %}">

would become:

    <img src="/assets/images/logo-4dcdc257210d38fb42cc3525b761316f60684b0b32ec24a5421b878da42bf379.svg">

Change-Id: I0af47a42218d3b831178869d3f01b0d7c7e20243

--- a/source/_config.yml
+++ b/source/_config.yml
@@ -47,6 +47,12 @@ plugins:
   - jekyll-seo-tag
   - jekyll-assets
 
+# Assets
+assets:
+  sources:
+    - assets
+    - sass
+
 # Facebook customer chat plugin settings
 fb_customer_chat:
   page_id: 108976382935124
