[sass] Move source/assets/sass to source/sass. NFC
This is achieve by the following command:

   $ git mv source/assets/sass source/sass

Sass files are not part of assets.

Change-Id: I783ec556d5f6e6242dcd88a02911ad3848c80366

--- a/source/_config.yml
+++ b/source/_config.yml
@@ -33,14 +33,14 @@ markdown: kramdown
 # Sass settings
 sass:
   add_charset: true
-  sass_dir: assets/sass
+  sass_dir: sass
 style: :compressed
 
 # Build settings
 incremental: true
 exclude:
   - README.md
-  - assets/sass
+  - sass
 
 # Plugin settings
 plugins:
